--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
            </div>
            <div class="hero__cards">
             <div class="card">
-                <img src="/images/angle-building.png" alt="" class="card__image">
+                <img src="images/angle-building.png" alt="" class="card__image">
                 <h3 class="card__title">Studien und Konzepte, Gesamtplanung</h3>
                 <h2 class="card__text">Neubau und Ausbau von Straßen, Verkehrsflächen, Wasserwegen und Eisenbahnen erfordert überzeugende Verkehrskonzepte.</h2>
                 <a href="" class="card__link">Erfahren Sie mehr</a>
            </div>
            <div class="card">
-            <img src="/images/passageway.png" alt="" class="card__image">
+            <img src="images/passageway.png" alt="" class="card__image">
             <h3 class="card__title">Verkehrsanlagen und Ingenieurbauwerke</h3>
             <h2 class="card__text">Verkehrskonzepte sind ein entscheidender Faktor jeglicher Infrastruktur. Das Ingenieurbüro Weiss hat deshalb ein Expertenteam aufgebaut.</h2>
             <a href="" class="card__link">Erfahren Sie mehr</a>
         </div>
            <div class="card">
-                <img src="/images/stairs.png" alt="" class="card__image">
+                <img src="images/stairs.png" alt="" class="card__image">
                 <h2 class="card__title">Entwurfsvermessung, 3D-Laserscanning</h2>
                 <p class="card__text">Bei Ausführung sämtlicher vermessungstechnischer Aufgaben im Leistungsbild „Ent­wurfs­vermessung“ sind wir ein leistungsstarker Partner.</p>
                 <a href="" class="card__link">Erfahren Sie mehr</a>
@@ -73,7 +73,7 @@
                 <div class="about__line"></div>
                 <a href="Lesen Sie weiter" class="about__link">Lesen Sie weiter</a>
             </div>
-            <img src="/images/metal_angles.png" alt="" class="about__img">
+            <img src="images/metal_angles.png" alt="" class="about__img">
         </div>
     </div>
 </body>
